<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UseFragment">
    <ProgressBar
        android:id="@+id/progress_bar_use"
        style="@android:style/Widget.Material.Light.ProgressBar.Large.Inverse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>
    <LinearLayout
        android:id="@+id/linear_layout_use"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:drawable/dialog_holo_light_frame">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product"
                android:background="@color/m1"
                android:textAlignment="center"
                android:textSize="40sp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textSize="25sp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/remains"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remain"
                android:textSize="25sp"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:drawable/dialog_holo_light_frame">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:background="@color/m1"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:text="@string/list"
                    android:textAlignment="center"
                    android:textSize="40sp"
                    android:textColor="@color/black"/>
                <Button
                    android:id="@+id/date_pick"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@drawable/calender"/>
            </LinearLayout>
            <ListView
                android:id="@+id/list_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </ListView>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>